# financeiro

./: .dockerignore  .gitignore  AzuriteConfig  Dockerfile  README-DOCKER.md  README.md  angular.json  docker-compose.yml  jest.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.early.coverage/: clover.xml
.early.coverage/lcov-report/: index.html
.github/: FUNDING.yml
.github/workflows/: tauri-release.yml
scripts/: update-tauri-version.mjs
src/: index.html  main.ts  styles.css  styles.scss  updater.json
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/migrations/: 0001_base_models.sql  0002__income_models.sql  0003_recurrent_expense.sql
src-tauri/src/: lib.rs  main.rs
src/app/: app.component.css  app.component.ts  app.config.ts  app.routes.ts
src/app/i18n/: i18n.service.ts  translations.ts
src/app/login/: login.component.html  login.component.ts
src/app/main/menu/: menu.routes.ts  (+3 more)
src/app/register/: register.component.html  register.component.ts
src/app/services/: filter-storage.service.ts
src/app/tokens/: localStorageToken.ts
src/models/: ChartOptions.ts  EvolutionModel.ts  User.ts  barchartModel.ts  category.ts  expense.ts  expenseListModel.ts  importModel.ts  income.ts  pagedList.ts  series.ts  xaxis.ts
src/services/: category.service.ts  chart.service.ts  crud-sql.service.ts  crud.service.ts  dashboard.service.ts  expense.service.ts  income.service.ts  monetary-visibility.service.ts  users.service.ts
~/.tauri/: myapp.key  myapp.key.pub  mykey.key  mykey.key.pub
(+44 files in other folders)
