[package]
name = "financeiro-angular"
version = "1.1.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
include_dir = { version = "0.7.4", features = ["glob"] }
tauri-plugin-dialog = "2.6"
tauri-plugin-fs = "2.4"
tauri-plugin-shell = "2.2"
tauri-plugin-updater = "2"

[dependencies.tauri-plugin-sql]
features = ["sqlite"]
version = "2.3"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
